--- a/src/pages/CampaignSheet.module.css
+++ b/src/pages/CampaignSheet.module.css
@@ -20,7 +20,7 @@
   top: 0; left: 0; width: 100%; height: 100%;
   z-index: -1;
   background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(10, 10, 10, 0.95)), 
-                    url('https://images.unsplash.com/photo-1550684848-fac1c5b4e853?q=80&w=2070&auto=format&fit=crop');
+                    url('../assets/asssrpg.png');
   background-size: cover;
   background-position: center;
 }
