--- a/src/pages/RefugeDashboard.css
+++ b/src/pages/RefugeDashboard.css
@@ -19,8 +19,8 @@
   position: fixed;
   top: 0; left: 0; width: 100%; height: 100%;
   z-index: -1;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(10, 10, 10, 0.9)), 
-                    url('https://images.unsplash.com/photo-1590625321528-724dc0f3689f?q=80&w=2070&auto=format&fit=crop'); /* Bunker Texture */
+   background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(10, 10, 10, 0.95)), 
+                    url('../assets/asssrpg.png'); /* Bunker Texture */
   background-size: cover;
   background-position: center;
 }
